# NPUcore

./: README.md
NPUcore_2022/dependency/fu740-hal/: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
NPUcore_2022/dependency/fu740-hal/src/: clock.rs  delay.rs  lib.rs  prelude.rs  serial.rs  stdout.rs  time.rs
NPUcore_2022/dependency/fu740-pac/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  fu740.yaml  update.ps1  update.sh
NPUcore_2022/dependency/fu740-pac/src/: ccache.rs  clint.rs  gpio.rs  i2c0.rs  lib.rs  msel.rs  plic.rs  prci.rs  pwm0.rs  spi0.rs  test.rs  uart0.rs
NPUcore_2022/dependency/fu740-pac/src/ccache/: config.rs  l2clientfilter.rs  l2perfevent0.rs  l2perfevent1.rs  l2pmcounter0.rs  l2pmcounter1.rs  l2pmcounter63.rs  wayenable.rs
NPUcore_2022/dependency/fu740-pac/src/clint/: msip_0.rs  msip_1.rs  msip_2.rs  msip_3.rs  msip_4.rs  mtime.rs  mtimecmp_0.rs  mtimecmp_1.rs  mtimecmp_2.rs  mtimecmp_3.rs  mtimecmp_4.rs
NPUcore_2022/dependency/fu740-pac/src/gpio/: ds.rs  fall_ie.rs  fall_ip.rs  high_ie.rs  high_ip.rs  input_en.rs  input_val.rs  iof_en.rs  iof_sel.rs  low_ie.rs  low_ip.rs  out_xor.rs  output_en.rs  output_val.rs  pue.rs  rise_ie.rs  rise_ip.rs
NPUcore_2022/dependency/fu740-pac/src/i2c0/: command__status.rs  control.rs  prescale_high.rs  prescale_low.rs  transmit__receive.rs
NPUcore_2022/dependency/fu740-pac/src/msel/: msel.rs
NPUcore_2022/dependency/fu740-pac/src/plic/: claimplete_0.rs  claimplete_1.rs  claimplete_2.rs  claimplete_3.rs  claimplete_4.rs  enable_0_0.rs  enable_0_1.rs  enable_0_2.rs  enable_0_3.rs  enable_0_4.rs  enable_1_0.rs  enable_1_1.rs  enable_1_2.rs  enable_1_3.rs  enable_1_4.rs  enable_2_0.rs  enable_2_1.rs  enable_2_2.rs  enable_2_3.rs  enable_2_4.rs  pending_0.rs  pending_1.rs  pending_2.rs  priority_1.rs  priority_10.rs  priority_11.rs  priority_12.rs  priority_13.rs  priority_14.rs  priority_15.rs  priority_2.rs  (+66 more)
NPUcore_2022/os/: Cargo.toml  Makefile  buildfs.sh  clear_doc.sh
NPUcore_2022/os/.cargo/: config.toml
NPUcore_2022/os/src/: config.rs  console.rs  lang_items.rs  linker-fu740.ld  linker-k210.ld  linker-qemu.ld  main.rs  sbi.rs  timer.rs
NPUcore_2022/os/src/boards/: fu740.rs  qemu.rs
NPUcore_2022/os/src/drivers/: mod.rs
NPUcore_2022/os/src/fs/: cache.rs  directory_tree.rs  file_trait.rs  filesystem.rs  layout.rs  mod.rs  poll.rs  swap.rs
NPUcore_2022/os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs  zram.rs
NPUcore_2022/os/src/syscall/: errno.rs  fs.rs  mod.rs  process.rs  socket.rs
NPUcore_2022/os/src/task/: elf.rs  manager.rs  mod.rs  pid.rs  processor.rs  signal.rs  task.rs  threads.rs
NPUcore_2022/os/src/trap/: context.rs  mod.rs  trap.S
NPUcore_2022/rustsbi-k210/: Cargo.toml
NPUcore_2022/rustsbi-k210/src/: execute.rs  main.rs  runtime.rs
NPUcore_2022/rustsbi-k210/src/feature/: delegate_page_fault.rs  sfence_vma.rs  supervisor_interrupt.rs  transfer_trap.rs
(+1195 files in other folders)
