[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "../dependency/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.8"
spin = "0.7"
bitflags = "1.3"
xmas-elf = "0.7.0"
virtio-drivers = { path = "../dependency/virtio-drivers" }
k210-pac = { path = "../dependency/k210-pac", optional = true }
k210-hal = { path = "../dependency/k210-hal", optional = true }
k210-soc = { path = "../dependency/k210-soc", optional = true }
fu740-pac = { path = "../dependency/fu740-pac", optional = true }
fu740-hal = { path = "../dependency/fu740-hal", optional = true }
embedded-hal = "=1.0.0-alpha.7"
nb = "1.0"
log = "0.4"
num_enum = { version="0.5", default-features = false }
downcast-rs = { version="1.2.0", default-features = false }
lz4_flex = { version="0.9", default-features = false }

[features]
zero_init = []
swap = []
zram = []
oom_handler = ["swap", "zram"]
board_qemu = ["oom_handler"]
board_k210 = ["k210-pac", "k210-hal", "k210-soc", "oom_handler"]
board_fu740 = ["fu740-pac", "fu740-hal", "zero_init"]
log_off = ["log/max_level_off"]

[profile.dev]
opt-level = 1
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.release]
lto = true
