[package]
name = "rustsbi-k210"
version = "0.0.1"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsbi = { path = "../dependency/rustsbi" }
riscv = { path = "../dependency/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.8"
k210-hal = { path = "../dependency/k210-hal" }
r0 = "1.0"
bit_field = "0.10"
