[package]
name = "fu740-pac"
version = "0.1.0"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for FU740 SoC"
keywords = ["no-std", "riscv", "register", "peripheral"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
riscv = { path="../riscv" }
vcell = "0.1.3"
